remove https, change refer

--- a/src/Wenwen/FrontendBundle/Resources/views/ProjectSurvey/complete.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/ProjectSurvey/complete.html.twig
@@ -19,9 +19,9 @@
                 感谢您参加本次的问卷调查，积分会在调查结束后的3周内自动累计。
                 {% elseif answer_status == 'screenout' %}
                 感谢您参加本次的问卷调查，非常抱歉，您不符合本次调查的要求。
-                {% else %}
+                {% elseif answer_status == 'quotafull' %}
                 感谢您参加本次的问卷调查，非常抱歉，您慢了一步，本次问卷调查名额已满。
-                {% endif %}
+                {% else %}
                 编号为 r{{survey_id}} 的问卷出现了一些小问题，此时无法确认您的回答是否有效。<br>
                 请联系我们的客服，告知问卷编号（r{{survey_id}}）和您的账号，我们的客服会尽最快的速度答复您。<br>
                 给您添麻烦了，请继续关注91问问，谢谢！
