--- a/web/css/profile.css
+++ b/web/css/profile.css
@@ -441,14 +441,18 @@ h1 {
         position: absolute;
         z-index: 1000;
         width: 65px;
-        top: -22px;
-        left: -58px;
+        top: 100px;
+        left: 72px;
+        opacity: 0;
+        filter: alpha(opacity=0);
         cursor: pointer; }
     .main-personal-profile .profile-base ul {
       margin-top: 15px; }
     .main-personal-profile .profile-base li.nk {
-      font-size: 24px;
-      margin-bottom: 10px; }
+      font-size: 22px;
+      margin-bottom: 10px;
+      font-weight: bold;
+      color: #555; }
     .main-personal-profile .profile-base li #points {
       color: #ff6700;
       font-size: 18px;
@@ -460,7 +464,8 @@ h1 {
     .main-personal-profile .profile-base li label {
       width: 64px;
       line-height: 30px;
-      text-align: left; }
+      text-align: left;
+      color: #a1a1a1; }
     .main-personal-profile .profile-base li input[type='text'], .main-personal-profile .profile-base li input[type='password'] {
       padding: 5px;
       border: 1px solid #ededf0;
@@ -484,32 +489,23 @@ h1 {
     .main-personal-profile .profile-base li a {
       margin-left: 10px;
       color: #0078b6; }
-    .main-personal-profile .profile-base .face-wapper {
-      position: relative; }
-      .main-personal-profile .profile-base .face-wapper img {
-        border: 1px solid #e7e7e7;
-        border-radius: 50%; }
-      .main-personal-profile .profile-base .face-wapper form {
-        position: absolute;
-        right: 0;
-        bottom: 0; }
-        .main-personal-profile .profile-base .face-wapper form input#profile_attachment {
-          border-radius: 5px;
-          -webkit-border-radius: 5px;
-          -moz-border-radius: 5px;
-          -ms-border-radius: 5px;
-          -o-border-radius: 5px;
-          filter: alpha(opacity=60);
-          -moz-opacity: 0.6;
-          -khtml-opacity: 0.6;
-          opacity: 0.6;
-          padding: 5px 10px; }
-        .main-personal-profile .profile-base .face-wapper form .errorInfo {
-          position: absolute;
-          width: 170px;
-          right: -24px;
-          top: 10px;
-          color: #ff0000; }
+    .main-personal-profile .profile-base .face-wapper img {
+      border: 2px solid #e3e3e3;
+      border-radius: 50%;
+      padding: 4px; }
+    .main-personal-profile .profile-base .face-wapper form input#profile_attachment {
+      border-radius: 5px;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      -ms-border-radius: 5px;
+      -o-border-radius: 5px;
+      padding: 5px 10px; }
+    .main-personal-profile .profile-base .face-wapper form .errorInfo {
+      position: absolute;
+      width: 170px;
+      right: 6px;
+      bottom: -21px;
+      color: #ff0000; }
     .main-personal-profile .profile-base .picCut {
       margin-bottom: 20px;
       display: none; }
