--- a/web/sass/profile.scss
+++ b/web/sass/profile.scss
@@ -89,8 +89,10 @@ $color: #0078b6;
 				position: absolute;
 				z-index: 1000;
 				width: 65px;
-				top: -22px;
-				left: -58px;
+				top: 100px;
+				left: 72px;
+				opacity: 0;
+				filter:alpha(opacity=0); 
 				cursor: pointer; 
 			}
 		}
@@ -99,8 +101,10 @@ $color: #0078b6;
 		}
 		li{
 			&.nk{
-				font-size: 24px;
-			    margin-bottom: 10px;
+				font-size: 22px;
+				margin-bottom: 10px;
+				font-weight: bold;
+				color: #555;
 			}
 			#points{
 				color: #ff6700;
@@ -117,6 +121,7 @@ $color: #0078b6;
 				width: 64px;
 				line-height: 30px;
 				text-align: left;
+				color: #a1a1a1;
 			}
 			input[type='text'], input[type='password']{
 				padding: 5px;
@@ -151,25 +156,21 @@ $color: #0078b6;
 			}
 		}
 		.face-wapper{
-			position: relative;
 			img{
-				border: 1px solid #e7e7e7;
+				border: 2px solid #e3e3e3;
 				border-radius: 50%;
+				padding: 4px;
 			}
 			& form{
-				position: absolute;
-				right: 0;
-				bottom: 0;
 				& input#profile_attachment{
 					@include border-radius(5px);
-					@include opacity(60, 0.6);
 					padding: 5px 10px;
 				}
 				.errorInfo{
 				    position: absolute;
 				    width: 170px;
-				    right: -24px;
-				    top: 10px;
+				    right: 6px;
+				    bottom: -21px;
 				    color: #ff0000;
 				}
 			}
