To strengthen the identfication

--- a/src/Wenwen/FrontendBundle/Resources/views/ProjectSurveyCint/information.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/ProjectSurveyCint/information.html.twig
@@ -17,7 +17,7 @@
 <div class="qnWrap">
     <div class="qnCon">
         <div class="qnTxt" style="display: none;">
-            <h2></h2>
+            <h2 id="title"></h2>
             <div class="subtit">
                 <strong>问卷标题： Cint问卷调查<br></strong>
                 <strong>问卷编号： <span id="no"></span><br></strong>
