--- a/src/Wenwen/FrontendBundle/Resources/views/Help/newGuideDetail.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Help/newGuideDetail.html.twig
@@ -21,87 +21,50 @@
 			<h3>问卷调查</h3>
 			<a class="back" href="{{ path('_default_support_newGuide') }}">返回新手上路»</a>
                <dl>
-                    <dt><strong>第一步</strong>选择“体验广告”进入页面。</dt>
-                    <dd><img src="http://www.91jili.com/images/help/guide02Step01.jpg" width="551" height="257"/></dd>
-                    <dt><strong>第二步</strong>选择任务大厅一或任务大厅二中的广告，点击“立即领取”任务，按照任务要求完成任务。</dt>
-                    <dd><img src="http://www.91jili.com/images/help/guide02Step02.jpg" width="551" height="125"/></dd>
-                    <dt><strong>第三步</strong>查看我的任务历史就能看到相关返利啦！</dt>
-                    <dd><img src="http://www.91jili.com/images/help/guide02Step03.jpg" width="551" height="299"/></dd>
+                    <dt><strong>第一步</strong>查看问卷邮件通知</dt>
+                    <dd><img src="{{ asset('img/help/guide1-1.jpg') }}" width="800" height="510"/></dd>
+                    <dt><strong>第二步</strong>进入问卷列表</dt>
+                    <dd><img src="{{ asset('img/help/guide1-2.jpg') }}" width="800" height="376"/></dd>
+                    <dt><strong>第三步</strong>回答问卷，赚取积分</dt>
+                    <dd><img src="{{ asset('img/help/guide1-3.jpg') }}" width="800" height="510"/></dd>
                </dl>
           </div>
           <div class="newGuideDetail" id="vote">
 			<h3>快速问答</h3>
 			<a class="back" href="{{ path('_default_support_newGuide') }}">返回新手上路»</a>
 	        	<dl>
-                    <dt><strong>第一步</strong>请先免费注册积粒网，如有积粒账户，请<a href="">登录</a>后，点击“商家列表”。</dt>
-                    <dd><img src="http://www.91jili.com/images/help/guide01Step01.jpg" width="551" height="257"/></dd>
-                    <dt><strong>第二步</strong>选择需要的商家，并点击“直接购物”，跳转到购物页面。</dt>
-                    <dd><img src="http://www.91jili.com/images/help/guide01Step02.jpg" width="551" height="290"/></dd>
-                    <dt><strong>第三步</strong>选择喜欢的商品，点击“加入购物车”，完成订单。</dt>
-                    <dd><img src="http://www.91jili.com/images/help/guide01Step03.jpg" width="551" height="190"/></dd>
-                    <dt><strong>第四步</strong>返回积粒网，查看<a href="">我的任务历史</a>就能看的返利啦！</dt>
-                    <dd><img src="http://www.91jili.com/images/help/guide01Step04.jpg" width="551" height="299"/></dd>
+                    <dt><strong>第一步</strong>进入快速问答列表</dt>
+                    <dd><img src="{{ asset('img/help/guide2-1.jpg') }}" width="800" height="442"/></dd>
+                    <dt><strong>第二步</strong>进行投票</dt>
+                    <dd><img src="{{ asset('img/help/guide2-2.jpg') }}" width="800" height="600"/></dd>
 	        	</dl>
           </div>
           <div class="newGuideDetail" id="shop">
 			<h3>购物返利</h3>
 			<a class="back" href="{{ path('_default_support_newGuide') }}">返回新手上路»</a>
                <dl>
-                    <dt><strong>第一步</strong>选择“体验广告”进入页面。</dt>
-                    <dd><img src="http://www.91jili.com/images/help/guide02Step01.jpg" width="551" height="257"/></dd>
-                    <dt><strong>第二步</strong>选择任务大厅一或任务大厅二中的广告，点击“立即领取”任务，按照任务要求完成任务。</dt>
-                    <dd><img src="http://www.91jili.com/images/help/guide02Step02.jpg" width="551" height="125"/></dd>
-                    <dd><img src="http://www.91jili.com/images/help/guide02Step02_2.jpg" width="551" height="300"/></dd>
-                    <dt><strong>第三步</strong>查看<a href="">我的任务历史</a>就能看到相关返利啦！</dt>
-                    <dd><img src="http://www.91jili.com/images/help/guide02Step03.jpg" width="551" height="299"/></dd>
+                    <dt><strong>第一步</strong>进入体验广告页面，点击返利商家右下角的“全部>>”</dt>
+                    <dd><img src="{{ asset('img/help/guide3-1.jpg') }}" width="800" height="510"/></dd>
+                    <dt><strong>第二步</strong>进入商家列表页面，点击“直接购物”，跳转到商家页面</dt>
+                    <dd><img src="{{ asset('img/help/guide3-2.jpg') }}" width="800" height="376"/></dd>
+                    <dt><strong>第三步</strong>选择心仪的商品，加入购物车，提交订单并支付</dt>
+                    <dd><img src="{{ asset('img/help/guide3-3.jpg') }}" width="800" height="574"/></dd>
+                    <dt><strong>第三步</strong>点击右上角个人中心->任务历史，查看订单返利的最新状态</dt>
+                    <dd><img src="{{ asset('img/help/guide3-4.jpg') }}" width="800" height="354"/></dd>
                </dl>
           </div>
           <div class="newGuideDetail" id="advertisement">
-			<h3>广告体验</h3>
+			<h3>体验广告</h3>
 			<a class="back" href="{{ path('_default_support_newGuide') }}">返回新手上路»</a>
                <dl>
-                    <dt><strong>第一步</strong>点击“游戏体验”进入“小鸡找米”游戏页面！</dt>
-                    <dd><img src="http://www.91jili.com/images/help/guide03Step01.jpg" width="551" height="257"/></dd>
-                    <dt><strong>第二步</strong>选择“掷色子”或“使用道具”进行游戏！</dt>
-                    <dd><img src="http://www.91jili.com/images/help/guide03Step02.jpg" width="551" height="298"/></dd>
-                    <dt><strong>第三步</strong>等待游戏完成后跳转到结束页面（在该页面可查看游戏状态），再关闭窗口！</dt>
-                    <dd><img src="http://www.91jili.com/images/help/guide03Step03.jpg" width="551" height="298"/></dd>
-                    <dt><strong>第四步</strong>查看<a href="">我的任务历史</a>就能看到获得的米粒数啦！</dt>
-                    <dd><img src="http://www.91jili.com/images/help/guide03Step04.jpg" width="551" height="298"/></dd>
+                    <dt><strong>第一步</strong>进入体验广告页面</dt>
+                    <dd><img src="{{ asset('img/help/guide4-1.jpg') }}" width="800" height="584"/></dd>
+                    <dt><strong>第二步</strong>进行体验广告</dt>
+                    <dd><img src="{{ asset('img/help/guide4-2.jpg') }}" width="800" height="426"/></dd>
+                    <dt><strong>第三步</strong>点击右上角个人中心->任务历史，查看该任务的最新状态</dt>
+                    <dd><img src="{{ asset('img/help/guide4-3.jpg') }}" width="800" height="350"/></dd>
                </dl>
           </div>
-          <div class="newGuideDetail" id="game">
-			<h3>游戏体验</h3>
-			<a class="back" href="{{ path('_default_support_newGuide') }}">返回新手上路»</a>
-               <dl>
-                    <dt><strong>第一步</strong>点击“商家活动”或首页商家活动区域更多，进入商家活动页面。</dt>
-                    <dd><img src="http://www.91jili.com/images/help/guide04Step01.jpg" width="551" height="257"/></dd>
-                    <dd><img src="http://www.91jili.com/images/help/guide04Step01_2.jpg" width="551" height="216"></dd>
-                    <dt><strong>第二步</strong>点击喜欢的商家活动，在商家活动页面购买所需商品。</dt>
-                    <dd><img src="http://www.91jili.com/images/help/guide04Step02.jpg" width="551" height="202"/></dd>
-                    <dd><img src="http://www.91jili.com/images/help/guide04Step02_2.jpg" width="551" height="216"/></dd>
-                    <dt><strong>第三步</strong>选择喜欢的商品，点击“加入购物车”，完成订单。</dt>
-                    <dd><img src="http://www.91jili.com/images/help/guide01Step03.jpg" width="551" height="190"/></dd>
-                    <dt><strong>第四步</strong>返回积粒网，查看<a href="">我的任务历史</a>就能看的返利啦！</dt>
-                    <dd><img src="http://www.91jili.com/images/help/guide01Step04.jpg" width="551" height="299"/></dd>
-               </dl>
-          </div>
-          <div class="newGuideDetail" id="invitation">
-			<h3>邀请好友</h3>
-			<a class="back" href="{{ path('_default_support_newGuide') }}">返回新手上路»</a>
-               <dl>
-                    <dt><strong>第一步</strong>点击“商家活动”或首页商家活动区域更多，进入商家活动页面。</dt>
-                    <dd><img src="http://www.91jili.com/images/help/guide04Step01.jpg" width="551" height="257"/></dd>
-                    <dd><img src="http://www.91jili.com/images/help/guide04Step01_2.jpg" width="551" height="216"></dd>
-                    <dt><strong>第二步</strong>点击喜欢的商家活动，在商家活动页面购买所需商品。</dt>
-                    <dd><img src="http://www.91jili.com/images/help/guide04Step02.jpg" width="551" height="202"/></dd>
-                    <dd><img src="http://www.91jili.com/images/help/guide04Step02_2.jpg" width="551" height="216"/></dd>
-                    <dt><strong>第三步</strong>选择喜欢的商品，点击“加入购物车”，完成订单。</dt>
-                    <dd><img src="http://www.91jili.com/images/help/guide01Step03.jpg" width="551" height="190"/></dd>
-                    <dt><strong>第四步</strong>返回积粒网，查看<a href="">我的任务历史</a>就能看的返利啦！</dt>
-                    <dd><img src="http://www.91jili.com/images/help/guide01Step04.jpg" width="551" height="299"/></dd>
-               </dl>
-          </div>	
      </div>
 </div>
 {% endblock %}
