delete all about gadget

--- a/src/Wenwen/FrontendBundle/Resources/views/Components/_footer.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Components/_footer.html.twig
@@ -40,8 +40,7 @@
         </div>
     </div>
     <div class="footer-con-right right">
-        <a href="{{ path('wenwen_frontend_gadget_index') }}" class="client"><span></span><em>下载客户端</em></a>
-        <a href="#" class="goTop"><span></span><em>返回顶部</em></a>
+        <a href="#" class="goTop">返回<br>顶部</a>
     </div>
 </div>
 {% include 'WenwenFrontendBundle:Components:_footerCopyright.html.twig' %} 
