modify some text of help center

--- a/src/Wenwen/FrontendBundle/Resources/views/Help/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Help/index.html.twig
@@ -49,15 +49,15 @@
             	<div class="title"><em>5</em><span>如何注册</span><span class="icons"></span></div>
                 <p>您可以通过以下链接完成注册程序。
 <a href="http://www.91wenwen.net/signup/" target="_blank">http://www.91wenwen.net/signup/ </a>
-请您注意我们发送的激活验证邮件有时可能会被归为垃圾邮件，您可以在垃圾邮件中找找来自于91问问调查网的验证激活邮件,并将我们添加为联系人。
-有些时候，邮件的发送可能会有10分钟到20分钟的延迟，请您过一会儿再查看邮箱。
-在您完成会员注册，首次登陆91问问调查网后，您的个人主页中会显示 “问卷列表”，您可以任意选择其中2份属性问卷进行回答，在您完成首份属性问卷之后将会获得30问问积分。今后我们将通过邮件向您发送新的调查问卷的邀请，请您留意您的邮件收件箱。</p>
+请您注意我们发送的激活验证邮件有时可能会被归为垃圾邮件，您可以在垃圾邮件中找找来自于91问问调查网的验证激活邮件,并将我们添加为联系人。<br>
+有些时候，邮件的发送可能会有10分钟到20分钟的延迟，请您过一会儿再查看邮箱。<br>
+在您完成会员注册，首次登陆91问问调查网后，您的个人主页中会显示 “问卷列表”，您可以分批或一次性回答完属性问卷即可获得相应积分。今后我们将通过邮件向您发送新的调查问卷的邀请，请您留意您的邮件收件箱。</p>
             </li>
             <li>
                 <div class="title"><em>6</em><span>生日错误</span><span class="icons"></span></div>
                 <p>您输入的生日信息需要与您在注册91问问账户时填写的生日信息相同。<br>
 在91问问调查网，生日是一个非常重要的信息，我们以此来判断一个用户的年龄，进而提供给他合适的问卷。<br>
-如果您忘记了您的生日信息或者您当初填入了错误的日期，您可以提供您的身份证明（身份证或其他可以证明您生日的证件），以邮件附件的形式提供给我们，会有客服人员帮您更新您的身份信息。</p>
+如果您忘记了您的生日信息或者您当初填入了错误的日期，请提供91问问账号并提供所回答问卷编号，以邮件形式提供给我们，这边帮您修改之后，请您再次回答问卷时填写正确生日并牢记。</p>
             </li>
             <li>
                 <div class="title"><em>7</em><span>账户被锁定</span><span class="icons"></span></div>
@@ -78,7 +78,7 @@
 
             <li>
                 <div class="title"><em>10</em><span>重复登陆网站/无法登陆</span><span class="icons"></span></div>
-                <p>确认下述各项后，请再试一次。
+                <p>确认下述各项后，请再试一次。<br>
 1.输入的邮箱地址、密码是否正确？<br>
 如果您忘记了密码，您可以通过以下URL找回密码<a href="https://www.91wenwen.net/reminder/" target="_blank">https://www.91wenwen.net/reminder/</a><br>
 ※密码区分英文大小写。输入时请注意。<br>
@@ -120,7 +120,7 @@
             </li>
             <li>
                 <div class="title"><em>4</em><span>问卷分值不一样</span><span class="icons"></span></div>
-                <p>1.每份问卷根据内容和难易度不同，分值不同，这是正常的情况。快速问答为1分一题，即答即得；属性问卷回答为每份10积分，且每7天只能回答2份属性问卷，每周会再次发送新的额度给您，额度不累计，不要浪费每周的额度，以便快速累计积分和获得高分问卷的机会。<br>
+                <p>1.每份问卷根据内容和难易度不同，分值不同，这是正常的情况。快速问答为1分一题，即答即得；属性问卷回答为每小题1积分。请您尽快完成所有属性问卷，以便快速累计积分和获得高分问卷的机会。<br>
 2.我们会不定期给您发送高分问卷的邀请，您如果经常且及时的回答常规个人信息问卷，今后收到高分问卷的机会就会高。您回答的属性问卷越多，获得高积分商业问卷的几率也越大，因为商业问卷的受访群体是回答了相关属性的用户。 当您完成了所以的属性问卷以后，会重新将所有属性问卷再次发送给您，以便您保持更新您的最新情况。</p>
             </li>
             <li>
@@ -171,7 +171,7 @@
         <ul class="con">
         	<li>
                 <div class="title"><em>1</em><span>如何获得返利</span><span class="icons"></span></div>
-                <p>1.登录积粒网账户，进入“体验广告”页面，点击“返利商家”模块的右下角“全部>>”，进入商家列表页面，找到您感兴趣的商家，并点击“直接购物”。选择需要购买的商品，下单购买商品。回到积粒网，点击页面右上角的下拉菜单，选择“我的任务历史”查看您的购物返利状态。<br>
+                <p>1.登录91问问调查网账户，进入“体验广告”页面，点击“返利商家”模块的右下角“全部>>”，进入商家列表页面，找到您感兴趣的商家，并点击“直接购物”。选择需要购买的商品，下单购买商品。回到91问问调查网，点击页面右上角的下拉菜单，选择“我的任务历史”查看您的购物返利状态。<br>
 2.进入“体验广告”页面，点击左上方的促销活动，前往商家活动页面，从列表中找到您感兴趣的商家活动并点击活动图片前往。找到您感兴趣的物品并下订单完成购买。您可以在任务历史页面，查看您的购物返利状态。</p>
             </li>
             <li>
@@ -187,12 +187,12 @@
 如果有以上情况，是没有返利的。</p>
             </li>
             <li>
-                <div class="title"><em>4</em><span>通过积粒网搜索收藏的物品，下次购物是否可以返利</span><span class="icons"></span></div>
-                <p>通过积粒网搜索收藏的物品，跳转至商品的结果页面，若购物之前已经收藏了该宝贝，可能导致您无法获得返利，不建议使用。</p>
+                <div class="title"><em>4</em><span>通过91问问调查网搜索收藏的物品，下次购物是否可以返利</span><span class="icons"></span></div>
+                <p>通过91问问调查网搜索收藏的物品，跳转至商品的结果页面，若购物之前已经收藏了该宝贝，可能导致您无法获得返利，不建议使用。</p>
             </li>
             <li>
                 <div class="title"><em>5</em><span>购物无返利</span><span class="icons"></span></div>
-                <p>请确认是否是通过积粒网产生的消费。请提交订单号，以便我们核查是否是我们网站的订单。<br>
+                <p>请确认是否是通过91问问调查网产生的消费。请提交订单号，以便我们核查是否是我们网站的订单。<br>
 （1）跳转信息被删除了，没有记录是我们网站购买，您是否有打开过其他的返利网站呢？<br>
 （2）购物成功了，我们网站记录了。但是该网站漏单了。</p>
             </li>
@@ -224,7 +224,7 @@
             </li>
             <li>
                 <div class="title"><em>3</em><span>积分兑换没有绑定手机</span><span class="icons"></span></div>
-                <p>如果您是第一次兑换，我们需要先输入手机号码，如果您成功收到验证码并且成功再次登陆，那么您的手机号码就已被91问问账号绑定了。以后就不需要再输入手机号码了。如果您输入的手机号码不正确或者与绑定账户不符，则兑换窗口呈灰色无法输入兑换数额。请重新确认手机号码。<br>
+                <p>如果您是第一次兑换，我们需要先输入手机号码，如果您成功收到验证码并且成功再次登录，那么您的手机号码就已被91问问账号绑定了。以后就不需要再输入手机号码了。如果您输入的手机号码不正确或者与绑定账户不符，则兑换窗口呈灰色无法输入兑换数额。请重新确认手机号码。<br>
 1.请您完成以下操作绑定您的手机号码：<br>
 登录您的个人主页（网站右上角）——会员基础信息——【拉动页面至底部，点击“变更注册信息”的蓝色按钮】（此步骤切勿遗漏）——“手机号码”一栏点击“修改”——输入手机号码，发送验证码——输入手机短信中的验证码——绑定成功 然后您可以进行兑换。<br> 
 2.如果上述步骤您无法完成或无法解决您的问题，请告知您使用的是什么浏览器？您电脑的操作系统是什么？请您提供详细截图发送至客服，我们会尽快为您解答！</p>
@@ -286,7 +286,7 @@
             </li>
             <li>
                 <div class="title"><em>15</em><span>支付宝兑换显示成功，但未收到</span><span class="icons"></span></div>
-                <p>请联系客服，提供兑换日期、积粒网账号，我们将告知您支付宝流水号，进行查询。</p>
+                <p>请联系客服，提供兑换日期、91问问调查网账号，我们将告知您支付宝流水号，进行查询。</p>
             </li>
             <li>
                 <div class="title"><em>16</em><span>支付宝有了流水号就是没收到</span><span class="icons"></span></div>
@@ -323,7 +323,7 @@
             </li>
             <li>
                 <div class="title"><em>21</em><span>网络太慢</span><span class="icons"></span></div>
-                <p>1.给您带来的不便深感抱歉。由于积粒网是一家全球性公司，服务器在海外，造成国内访问速度缓慢。<br>
+                <p>1.给您带来的不便深感抱歉。由于91问问调查网是一家全球性公司，服务器在海外，造成国内访问速度缓慢。<br>
 2.我们的系统团队始终致力于开发和改善此类功能，希望为您提供更好的服务。
 </p>
             </li>
