fix feedback js

--- a/src/Wenwen/FrontendBundle/Resources/views/Help/feedback.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Help/feedback.html.twig
@@ -23,10 +23,10 @@
 				<span id="content_error"></span>
 			</li>
 			<li>
-				<label for="email"><em>*</em>91问问注册邮箱：</label>
-				<input type="text" id="email" name="email">
-				<span id="email_succeed"></span>
-				<span id="email_error"></span>
+				<label for="feedbackEmail"><em>*</em>91问问注册邮箱：</label>
+				<input type="text" id="feedbackEmail" name="feedbackEmail">
+				<span id="feedbackEmail_succeed"></span>
+				<span id="feedbackEmail_error"></span>
 			</li>
 		</ul>
 		<div class="sys_error" id="sys_error"></div>
