update home banner pic and feedback js

--- a/web/sass/index.scss
+++ b/web/sass/index.scss
@@ -366,4 +366,9 @@ $main-ad-color: #eb7020;
 	z-index: 1999;
 	cursor: pointer;
 }
+#secs{
+	line-height: 30px;
+	text-align: center;
+	color: #ff0000;
+}
 @import "layout/footer";
