--- a/src/Wenwen/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Home/index.html.twig
@@ -96,6 +96,7 @@
 			<div class="submitSucceed">
 				<div class="img"><img src="{{ asset('img/common/finished.png') }}" alt="提交成功"></div>
 				<p>您已提交成功，感谢您的意见，我们的客服小问将根据您的问题，在24小时内联系您。</p>
+				<div id="secs"></div>
 			</div>
 			<div class="closeTag"></div>
 			<div class="closeBtn"></div>		
