--- a/web/css/index.css
+++ b/web/css/index.css
@@ -785,6 +785,11 @@ body {
   z-index: 1999;
   cursor: pointer; }
 
+#secs {
+  line-height: 30px;
+  text-align: center;
+  color: #ff0000; }
+
 .footer {
   margin-top: 50px;
   border-top: 3px solid #d6d9df;
