--- a/src/Wenwen/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Home/index.html.twig
@@ -72,7 +72,7 @@
 <div class="fbCon">
 	<div class="fdWrap">
 		<div class="fdBox">
-			<div class="closeTag"></div>
+			<div class="closeTag" title="不再显示该窗口"></div>
 		</div>
 	</div>
 	<div class="unfdWrap">
@@ -98,7 +98,7 @@
 				<p>您已提交成功，感谢您的意见，我们的客服小问将根据您的问题，尽快联系您。</p>
 				<div id="secs"></div>
 			</div>
-			<div class="closeTag"></div>
+			<div class="closeTag" title="不再显示该窗口"></div>
 			<div class="closeBtn"></div>		
 		</div>
 	</div>
