--- a/web/css/jl.ui.help.css
+++ b/web/css/jl.ui.help.css
@@ -18,7 +18,7 @@
 .helpR{width: 749px;margin-left: -1px;padding: 5px 30px 20px;background-color: #fff;font-size: 14px;min-height: 650px;}
 .helpR h2{height: 45px;line-height: 45px;color: #fd6244;font-family: "微软雅黑";font-size: 18px;font-weight: bold;border-bottom: 1px dotted #c9c9c9;}
 .newGuide{padding: 0 30px;}
-.newGuide li{float: left;width: 50%;padding: 40px 0;height: 100px;overflow: hidden;}
+.newGuide li{float: left;width: 50%;padding: 75px 0 40px;height: 100px;overflow: hidden;}
 .newGuide li p{float: left;margin-right: 10px;}
 .newGuide li dl{float: left;width: 185px;}
 .newGuide li dt{color: #333;font-family: "微软雅黑";font-weight: bold;font-size: 18px;}
@@ -48,7 +48,7 @@ span.txt02{ color: #fd6244; background-color: #f1f1f1; height: 25px; line-height
 .channels{ margin-top: 10px; border-bottom: 3px solid #fd6244;}
 .channels span{ height: 25px; line-height: 25px; padding: 0 15px; margin-right: 5px; font-weight: bold; letter-spacing: 1px; color: #9e9e9e; background-color: #f1f1f1; border-radius: 3px 3px 0 0; display: inline-block; *display: inline; *zoom: 1; cursor: pointer;}
 .channels span.active{ color: #fff; background-color: #fd6244;}
-.shoppingTips{ position: relative; z-index: 1; font-size: 12px; }
+.shoppingTips{ position: relative; z-index: 1; font-size: 12px; margin-top: 65px; }
 .shoppingTips .tipTxt{ background-color: #f5f5f5; padding: 10px 20px; font-family: "宋体"; letter-spacing: 1px; line-height: 35px;}
 .shoppingTips .tipTxt strong{ font-family: "微软雅黑"; font-size: 14px; color: #f75232; padding-left: 18px; background:url(../images/help/icon00.png) no-repeat center left;}
 .shoppingTips .tipTxt span{ width: 20px; height: 35px; line-height: 35px; display: inline-block; *display: inline; *zoom: 1; vertical-align: middle; cursor: pointer;background:url(../images/help/iconQ.png) no-repeat center left;}
