--- a/src/Wenwen/FrontendBundle/Resources/views/Advertisement/_advShopActivity.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Advertisement/_advShopActivity.html.twig
@@ -1,7 +1,34 @@
 <div class="main-con-shop clearfix">
 	<div class="advLeft left">
 		<div class="tbSearchWrap">
+			<form action="#"  id="search_box">
 			<a data-type="6" data-tmpl="573x66" data-tmplid="140" data-style="2" data-border="0" biz-s_logo="1" biz-s_hot="1" href="#"></a>
+            <script type="text/javascript"> 
+				(function (win, doc) {
+				    var s = doc.createElement("script"), h = doc.getElementsByTagName("head")[0];
+				    if (!win.alimamatk_show) {
+				        s.charset = "gbk";
+				        s.async = true;
+				        s.src = "http://a.alimama.cn/tkapi.js";
+				        h.insertBefore(s, h.firstChild);
+				    }
+				    var o = { pid: "mm_49376465_4372428_28778243", /*推广单元ID，用于区分不同的推广渠道*/
+				        appkey: "", /*通过TOP平台申请的appkey，设置后引导成交会关联appkey*/
+				        unid: ""/*自定义统计字段*/ 
+				    };
+				    win.alimamatk_onload = win.alimamatk_onload || [];
+				    win.alimamatk_onload.push(o);
+				})(window, document);
+			</script>
+			</form>
+			<script type="text/javascript">
+	            var search_form_rt_config = search_form_rt_config || {};
+	            search_form_rt_config = {{ rt_of_search_form|json_encode|raw   }};
+	            var search = function() {
+	                $('#search_box').submit();
+	                return false;
+	            };
+            </script>
 		</div>
 		<div class="main-slider left">
 			<div class="mask">
