--- a/web/css/advertisement.css
+++ b/web/css/advertisement.css
@@ -330,9 +330,9 @@ body {
   position: relative; }
 
 .tbSearchWrap {
-  width: 764px;
+  width: 574px;
   height: 66px;
-  padding: 27px 0;
+  padding: 27px 95px;
   background: #fff;
   border: 1px solid #ebedf2;
   margin-bottom: 10px;
