update focus btn and js judge

--- a/src/Wenwen/FrontendBundle/Resources/views/User/register.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/User/register.html.twig
@@ -59,7 +59,7 @@
 				<span id="protocol_error"></span>
 			</li>
 		</ul>
-		<div class="main-register-btn"><span id="submit_button">注&nbsp;&nbsp;&nbsp;册</span><img src="{{ asset('img/user/regPoint.png') }}" alt="注册即送10积分"></div>
+		<div class="main-register-btn" tabindex="0"><span id="submit_button">注&nbsp;&nbsp;&nbsp;册</span><img src="{{ asset('img/user/regPoint.png') }}" alt="注册即送10积分"></div>
 
         {{ form_rest(form) }}
 		</form>
