--- a/src/Wenwen/FrontendBundle/Resources/views/User/resetPwd.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/User/resetPwd.html.twig
@@ -34,7 +34,7 @@
 						<div class="prompt"><span id="pwdRepeat_succeed"></span><span id="pwdRepeat_error"></span></div>
 					</li>
 				</ul>
-				<span class="btn" id="savePwd">下一步</span>
+				<span class="btn" id="savePwd" tabindex="0">下一步</span>
 			</div>
 			</form>
 		</div>
