--- a/src/Wenwen/FrontendBundle/Resources/views/User/resetPwdEmail.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/User/resetPwdEmail.html.twig
@@ -18,7 +18,7 @@
 				<div class="title">请输入您注册时填写的邮箱</div>
 				<div><input type="text" id="email" name="email"></div>
 				<div class="prompt"><span id="email_succeed"></span><span id="email_error"></span></div>
-				<span class="btn" id="sendEmail">下一步</span>
+				<span class="btn" id="sendEmail" tabindex="0">下一步</span>
 				<input type="hidden" id="secondNum" value="59"/>
 			</div>
 		</div>
