--- a/web/sass/account.scss
+++ b/web/sass/account.scss
@@ -50,6 +50,7 @@
 				margin-left: 5px;
 				padding: 0 5px;
 				line-height: 30px;
+				vertical-align: top;
 				&#curMobile{
 					padding: 0;
 					@include dib();
