--- a/web/sass/register.scss
+++ b/web/sass/register.scss
@@ -44,6 +44,11 @@
 				color: $error-color;
 			}
 		}
+		.captcha_reload{
+			background: url(../img/user/change.png) no-repeat 0px 2px;
+			padding-left: 20px;
+			color: #a1a1a1;
+		}
 	}
 }
 .main-register-btn{
