fixed active email page

--- a/src/Wenwen/FrontendBundle/Resources/views/User/emailActive.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/User/emailActive.html.twig
@@ -16,7 +16,7 @@
 			<div class="text">
 				<div class="title">就差一步了，快去激活您的账户吧！</div>
 				{% if gotoEmail %}
-					<p>我们已经向您的邮箱{{ user.email }}发送了一封激活邮件，请点击邮件中的链接完成注册。</p>
+					<p>我们已经向您的邮箱{{ email }}发送了一封激活邮件，请点击邮件中的链接完成注册。</p>
 		            <a href="http://{{ gotoEmail }}" target="_blank">立即进入邮箱</a>
 		        {% endif %}
 		        <p><span id="sendAgain">已发送</span><a class="again">没收到？再次发送！</a><span id="prompt"><span id="second">59</span>秒后可重新发送</span></p>
