--- a/web/css/suggest.css
+++ b/web/css/suggest.css
@@ -19,6 +19,8 @@ body {
 
 .main {
   margin-top: 2px; }
+  .main.unlogin {
+    margin-top: 0px; }
 
 .main-con-left > div, .main-con-right > div {
   margin-top: 20px;
