--- a/src/Wenwen/FrontendBundle/Resources/views/Survey/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Survey/index.html.twig
@@ -16,7 +16,7 @@
 			<em></em>
 			<h1>问卷列表</h1>
             <ul id="surveyList">
-            {% if  votes|length > 10  %}
+            {% if  votes|length < 1  %}
                 <li>现在还没有新的问卷调查。</li>
             {% endif %}
 				<li>
@@ -118,6 +118,7 @@
 			</ul>
 
             {{ include( 'WenwenFrontendBundle:Survey:_sopSurveyList.html.twig', {'sop_params': sop_params, 'preview': preview} ) }}
+            {{ include( 'WenwenFrontendBundle:Survey:_voteList.html.twig', {'votes': votes} ) }}
 		</div>
 	</div>
 	<div class="main-con-right right">
