--- a/web/sass/advertisement.scss
+++ b/web/sass/advertisement.scss
@@ -21,7 +21,7 @@
 	background: $block-bg-color;
 	border: $block-border;
 	.mask{
-		width: 764px;
+		width: 520px;
 		height: 212px;
 	}
 	ul{
@@ -35,7 +35,6 @@
 		float: left;
 		position: relative;
 		z-index: 3;
-		padding-left: 244px;
 		top: 0;
 		left: 0;
 	}
@@ -60,7 +59,7 @@
 		top: 0;
 		padding: 8px 20px 20px;
 		width: 204px;
-		@include dib();
+		display: block;
 		vertical-align: top;
 		h2{
 			height: 45px;
@@ -108,6 +107,12 @@
 			width: 520px;
 		}
 	}
+}
+.main-slider-text{
+	width: 244px;
+	height: 212px;
+	position: relative;
+	z-index: 2;
 }
 .main-con-shop{
 	overflow: hidden;
