--- a/web/css/index.css
+++ b/web/css/index.css
@@ -467,7 +467,7 @@ body {
   left: 0;
   right: 0;
   height: 80px;
-  box-shadow: none; }
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.15); }
 
 .main {
   margin-top: 80px; }
