--- a/web/sass/index.scss
+++ b/web/sass/index.scss
@@ -11,7 +11,7 @@ $main-ad-color: #eb7020;
 	left: 0;
 	right: 0;
 	height: 80px;
-	box-shadow: none;
+	box-shadow: 0px 1px 5px rgba(0, 0, 0, .15);
 }
 .main{
 	margin-top: 80px;
